snugom/tests/ui/filterable_text_on_numeric.stderr
error: filterable(text) can only be used on String fields; numeric types are always NUMERIC
  --> tests/ui/filterable_text_on_numeric.rs:14:25
   |
14 |     #[snugom(filterable(text))]
   |                         ^^^^
